syntax = "proto3";
package text_to_embedding;

service TextToEmbedding {
  rpc Convert (TextRequest) returns (EmbeddingResponse) {}
}

message TextRequest {
  repeated string texts = 1;
}

message EmbeddingResponse {
  repeated Embedding embeddings = 1;
}

message Embedding {
  repeated float value = 1;
}